--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
-  
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  
+  <h1 id="titulo">¡Hola mundo!</h1>
+  <img src="Pictures/F - Frog.jpg" alt="frog" height="200px">
+  <h2 id="rojo">Hola mundo</h2>
+  <h3 class="azul">Hola mundo</h3>
+  <h4 class="azul">Hola mundo</h4>
+  <h5 id="cinco">Hola mundo</h5>
+  <h6 id="boton">cambio</h6>
+
   
   <!--
   This script places a badge on your repl's full-browser view back to your repl's cover
@@ -18,6 +25,7 @@
   teal, blue, blurple, magenta, pink!
   -->
   <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
